--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "DEBUG=true npx tsx src/main.ts",
+    "dev": "DEBUG=true npx tsx -r dotenv/config src/main.ts",
     "build": "npx esbuild src/main.ts --bundle --platform=node --outfile=dist/index.js --minify",
     "start": "node dist/index.js"
   },
@@ -22,6 +22,7 @@
     "@octokit/action": "^7.0.0",
     "@octokit/plugin-retry": "^7.1.2",
     "@octokit/plugin-throttling": "^9.3.2",
-    "@octokit/types": "^13.6.1"
+    "@octokit/types": "^13.6.1",
+    "dotenv": "^16.4.5"
   }
 }
