--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
+    "@ai-sdk/anthropic": "^0.0.56",
+    "@ai-sdk/openai": "^0.0.72",
     "@octokit/action": "^7.0.0",
     "@octokit/plugin-retry": "^7.1.2",
     "@octokit/plugin-throttling": "^9.3.2",
     "@octokit/types": "^13.6.1",
-    "dotenv": "^16.4.5"
+    "ai": "^3.4.33",
+    "dotenv": "^16.4.5",
+    "zod": "^3.23.8"
   }
 }
