--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "AI Code Reviewer"
+name: "AI Code Reviewer for Pull Requests"
 description: "Review, summarize and auto-fix pull requests with AI"
 author: "Presubmit.ai"
 branding:
