fix presubmit name

--- a/.github/workflows/presubmit-review.yml
+++ b/.github/workflows/presubmit-review.yml
@@ -14,7 +14,7 @@ jobs:
   review:
     runs-on: ubuntu-latest
     steps:
-      - uses: presubmitai/ai-reviewer@latest
+      - uses: presubmit/ai-reviewer@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
