--- a/.github/workflows/presubmit-review.yml
+++ b/.github/workflows/presubmit-review.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: presubmit/ai-reviewer@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          LLM_MODEL: "claude-3-5-sonnet-20241022"
           LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
         with:
           llm_model: "claude-3-5-sonnet-20241022"
