--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
     "@ai-sdk/anthropic": "^0.0.56",
+    "@ai-sdk/google": "^0.0.55",
     "@ai-sdk/openai": "^0.0.72",
     "@octokit/action": "^7.0.0",
     "@octokit/plugin-retry": "^7.1.2",
